[gd_scene load_steps=28 format=3 uid="uid://bin8yock0snta"]

[ext_resource type="Script" uid="uid://bjdfwv81s4wkf" path="res://Player/PlayerScript.gd" id="1_tok1r"]
[ext_resource type="Texture2D" uid="uid://dyhkussfmnmyg" path="res://Player/Idle.png" id="2_ddoul"]
[ext_resource type="Texture2D" uid="uid://b3xp22excohfi" path="res://Player/Run.png" id="3_8g4oa"]
[ext_resource type="Texture2D" uid="uid://k6itgdrjqaoe" path="res://Player/151515151515.png" id="4_s1rgi"]
[ext_resource type="Texture2D" uid="uid://bcl0s4pbikmnr" path="res://Player/image-2145.png" id="5_j23h2"]
[ext_resource type="Texture2D" uid="uid://c6d2wgsqx7cgp" path="res://Player/image-26.png" id="6_0j2ni"]
[ext_resource type="Texture2D" uid="uid://cs1oo8cxo3jpn" path="res://Player/image-9.png" id="7_v0k0e"]
[ext_resource type="Texture2D" uid="uid://c3c6sisncbyyv" path="res://Player/image-7.png" id="8_5wa8t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bj6mc"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yacc7"]
atlas = ExtResource("2_ddoul")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5ibr"]
atlas = ExtResource("2_ddoul")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oim0"]
atlas = ExtResource("2_ddoul")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p8th"]
atlas = ExtResource("2_ddoul")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_he25i"]
atlas = ExtResource("2_ddoul")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjrx3"]
atlas = ExtResource("2_ddoul")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nns5x"]
atlas = ExtResource("3_8g4oa")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7kse"]
atlas = ExtResource("3_8g4oa")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_udj44"]
atlas = ExtResource("3_8g4oa")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdu6o"]
atlas = ExtResource("3_8g4oa")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c33a"]
atlas = ExtResource("3_8g4oa")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxvsd"]
atlas = ExtResource("3_8g4oa")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mru2b"]
atlas = ExtResource("3_8g4oa")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo66j"]
atlas = ExtResource("3_8g4oa")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_kq8as"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_s1rgi")
}],
"loop": true,
"name": &"Idle",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj6mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yacc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5ibr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oim0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p8th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he25i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjrx3")
}],
"loop": true,
"name": &"Idle_1",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_s1rgi")
}, {
"duration": 1.0,
"texture": ExtResource("6_0j2ni")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nns5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7kse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udj44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdu6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c33a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxvsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mru2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo66j")
}],
"loop": true,
"name": &"Run2",
"speed": 12.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_s1rgi")
}, {
"duration": 1.0,
"texture": ExtResource("5_j23h2")
}, {
"duration": 1.0,
"texture": ExtResource("6_0j2ni")
}],
"loop": true,
"name": &"sb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_s1rgi")
}, {
"duration": 1.0,
"texture": ExtResource("7_v0k0e")
}, {
"duration": 1.0,
"texture": ExtResource("8_5wa8t")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_epv77"]
radius = 20.0
height = 68.0

[sub_resource type="FontFile" id="FontFile_tok1r"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_tok1r"]
line_spacing = 0.0
font = SubResource("FontFile_tok1r")
font_size = 10
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.784314)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_tok1r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.96046e-08, -32)
scale = Vector2(0.211861, 0.158373)
sprite_frames = SubResource("SpriteFrames_kq8as")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -33)
shape = SubResource("CapsuleShape2D_epv77")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashAgain" type="Timer" parent="."]
wait_time = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -41)
zoom = Vector2(1.5, 1.5)

[node name="Label" type="Label" parent="."]
offset_left = -322.0
offset_top = -118.0
offset_right = -282.0
offset_bottom = -95.0
scale = Vector2(1.62385, 1.62385)
text = "123"
label_settings = SubResource("LabelSettings_tok1r")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashAgain" to="." method="_on_dash_again_timeout"]
